--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="menu_list">
-                <ul class="menu_list">
+                <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about_us">About Us</a></li>
                     <li><a href="./nav__links/department.html">Departments</a></li>
@@ -33,6 +33,11 @@
 
                 </ul>
 
+            </div>
+            <div class="menu-icon">
+                <div class="menu-icon-bar"></div>
+                <div class="menu-icon-bar"></div>
+                <div class="menu-icon-bar"></div>
             </div>
 
         </div>
@@ -56,8 +61,8 @@
         <br><br>
         <!-- this section defines the about us page  -->
         <div class="about_us">
-            <h2 id="about_us"> --------- ABOUT US
-                --------
+            <h2 id="about_us"> ---- ABOUT US
+                ----
             </h2>
             <div class="about_msg">
                 <div class="headmistress_image"></div>
@@ -89,28 +94,7 @@
                         aliquam
                         odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
                         repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. up
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
-                        nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
-                        aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. up
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
-                        nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
-                        aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. up
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
-                        nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
-                        aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
-                        nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
-                        aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
+                        illum
                         repellendus impedit consequatur voluptatct nam nemo voluptatem
                         accusantium voluptates assumenda laborum praesentium molestiae quibusdam. </p>
 
@@ -121,7 +105,7 @@
 
 
         <!-- this section defines the mission and vision of the school -->
-        <h2 id="mission_vision"> ------- Our Mission and Vision -------</h2>
+        <h2 id="mission_vision"> Our Mission and Vision </h2>
         <div class="mission_vision">
 
             <div class="Mission">
@@ -132,7 +116,7 @@
             </div>
             <div class="Vision">
                 <img src="./images/vision.png" alt="vision logo">
-                <h3>Service</h3>
+                <h3>Vision</h3>
                 <p>Lorem ipsum dolor sit amet consectetur qui nam. Consequuntur
                     praesentium, et quidem deleniti eveniet harum iste?</p>
             </div>
@@ -145,7 +129,7 @@
 
 
         <!-- this section defines the core values of the school  -->
-        <h2 id="core_values"> --------- Our Core Values ----------</h2>
+        <h2 id="core_values"> ---- Our Core Values ---- </h2>
         <div class="core_values">
 
             <div class="value 1">
@@ -189,8 +173,7 @@
                     <span>1</span>
                 </div>
                 <div class="reason1">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos modi beatae numquam vel
-                        tempora molestiae tempore dolorem hic eaque.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
             <div class="reason">
@@ -198,8 +181,7 @@
                     <span>2</span>
                 </div>
                 <div class="reason2">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos modi beatae numquam vel
-                        tempora molestiae tempore dolorem hic eaque.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
             <div class="reason">
@@ -207,8 +189,7 @@
                     <span>3</span>
                 </div>
                 <div class="reason3">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos modi beatae numquam vel
-                        tempora molestiae tempore dolorem hic eaque.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
             <div class="reason">
@@ -216,8 +197,7 @@
                     <span>4</span>
                 </div>
                 <div class="reason4">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos modi beatae numquam vel
-                        tempora molestiae tempore dolorem hic eaque.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
             <div class="reason">
@@ -225,8 +205,7 @@
                     <span>5</span>
                 </div>
                 <div class="reason5">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos modi beatae numquam vel
-                        tempora molestiae tempore dolorem hic eaque.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
 
@@ -268,13 +247,13 @@
                 <h4>CONNECT WITH US</h4>
                 <div class="social_links">
                     <a href=""><img src="" alt="facebook">
-                        <div class="facebook_link"></div>
+                        <div class="facebook_link">&#xe8b5;</div>
                     </a>
                     <a href=""><img src="" alt="instagram">
-                        <div class="instagram_link"></div>
+                        <div class="instagram_link">&#xe8b5;</div>
                     </a>
                     <a href=""><img src="" alt="twitter">
-                        <div class="twitter_link"></div>
+                        <div class="twitter_link">&#xe8b5;</div>
                     </a>
                 </div>
                 <br><br>
@@ -282,7 +261,7 @@
                     <h4>&copy; 2023 Star of The East School Complex</h4>
                 </div>
             </div>
-            <br><br>
+
 
         </div>
     </footer>
