--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -44,7 +44,7 @@
 
         <h2>JOIN THE COMMUNITY OF EXCELLENCE</h2>
         <P>Enroll your child today, sit back and watch the success story.</P>
-
+        <button> ENROLL </button>
 
     </div>
     <!-- admission notice  -->
