--- a/nav__links/contact.html
+++ b/nav__links/contact.html
@@ -41,7 +41,9 @@
 
     </div>
     <div class="slide_container">
-
+        <h2>OUR CONTACTS AND LOCATION</h2>
+        <P>Reach to Us. We are all ears</P>
+        <button> FIND US</button>
     </div>
     <!-- admission notice  -->
     <div class="admission_notice">
