--- a/nav__links/news.html
+++ b/nav__links/news.html
@@ -24,7 +24,7 @@
             <div class="menu_list">
                 <ul class="menu_list">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="./about_us.html">About Us</a></li>
+                    <li><a href="../index.html">About Us</a></li>
                     <li><a href="./department.html">Departments</a></li>
                     <li><a href="./admission.html">Admission</a></li>
                     <li><a href="./alumni.html">Alumni</a></li>
@@ -41,6 +41,9 @@
 
     </div>
     <div class="slide_container">
+        <h2 style="color: #0b103b;">OUR NOTICE BOARD</h2>
+        <P style="color: #0b103b;">Updates on what is going on in span START OF THE EAST and its environs.</P>
+        <button> SUBSCRIBE</button>
 
     </div>
     <!-- admission notice  -->
