updated  the slide container for the nav link css files

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                 <img src="./images/mission.png" alt="mission logo">
                 <h3>Mission</h3>
                 <p>Lorem ipsum dolor sit amet consectetur qui nam. Consequuntur
-                    praesentium, et quidem deleniti eveniet harum iste?</p>
+                    praesentium, </p>
             </div>
             <div class="Vision">
                 <img src="./images/vision.png" alt="vision logo">
                 <h3>Vision</h3>
                 <p>Lorem ipsum dolor sit amet consectetur qui nam. Consequuntur
-                    praesentium, et quidem deleniti eveniet harum iste?</p>
+                    praesentium,</p>
             </div>
 
         </div>
