--- a/nav__links/alumni.html
+++ b/nav__links/alumni.html
@@ -35,6 +35,11 @@
                 </ul>
 
             </div>
+            <div class="menu-icon">
+                <div class="menu-icon-bar"></div>
+                <div class="menu-icon-bar"></div>
+                <div class="menu-icon-bar"></div>
+            </div>
 
         </div>
 
