updated the text in the slide container to be unique to each nav page

--- a/nav__links/gallery.html
+++ b/nav__links/gallery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BACKGROUND PRACTICALS</title>
+    <title>GALLERY - STAR OF THE EAST</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./gallery.css">
 </head>
@@ -50,13 +50,53 @@
     </div>
     <!-- admission notice  -->
     <div class="admission_notice">
-        <h2>ADMISSION OPEN FOR 2023 ACADEMIC YEAR</h2>
-        <button><a href="">Enroll Now</a></button>
+        <h2>CHECK OUT OUR RECENT GRADUATION PICTURES</h2>
+        <button><a href="">View</a></button>
     </div>
     <div class="main">
         SCHOOL GALLERY
-        <div class="mainn"></div>
+        <div class="mainn">
+
+            <div class="gallery">
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+                <div class="photo"></div>
+
+
+
+
+            </div>
+
+        </div>
+        <div class="album-nav">
+            <h3>Page</h3>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
+            </ul>
+
+        </div>
+
     </div>
+
+
+
+
     <footer>
         <div class="inner_footer">
             <div class="school_contact_info">
