--- a/nav__links/news.html
+++ b/nav__links/news.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BACKGROUND PRACTICALS</title>
+    <title>NEWS - STAR OF THE EAST</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./news.css">
 </head>
@@ -53,8 +53,8 @@
     </div>
     <!-- admission notice  -->
     <div class="admission_notice">
-        <h2>ADMISSION OPEN FOR 2023 ACADEMIC YEAR</h2>
-        <button><a href="">Enroll Now</a></button>
+        <h2>SCUBSCRIBE TO OUR WEEKLY NEWS UPDATES</h2>
+        <button><a href="">Subscribe</a></button>
     </div>
     <div class="main">
         NEWS
