--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
     <div class="slide_container">
 
-        <h2>RAISING THE ETHICAL STANDARDS</h2>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, ex.</P>
+        <h2>RAISING CHRISTLIKE CHILDREN</h2>
+        <P>Train the child the way he should go so that when he grows, he will not depart from it.</P>
 
 
     </div>
