--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BACKGROUND PRACTICALS</title>
+    <title>ADMISSION - STAR OF THE EAST</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./admission.css">
 </head>
