this is a massive update running through the nav menu icon and and its on-click event from the main.js file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="menu_list">
-                <ul>
+                <ul id="menuList">
                     <li><a href="#">Home</a></li>
                     <li><a href="#about_us">About Us</a></li>
                     <li><a href="./nav__links/department.html">Departments</a></li>
@@ -34,7 +34,7 @@
                 </ul>
 
             </div>
-            <div class="menu-icon">
+            <div class="menu-icon" onclick="togglemenu()">
                 <div class="menu-icon-bar"></div>
                 <div class="menu-icon-bar"></div>
                 <div class="menu-icon-bar"></div>
@@ -265,6 +265,8 @@
 
         </div>
     </footer>
+
+    <script src="./main.js"></script>
 </body>
 </div>
 
