--- a/nav__links/Faqs.html
+++ b/nav__links/Faqs.html
@@ -13,7 +13,7 @@
 <body>
     <!-- this sectio describes the nav bar components of the home page -->
     <div class="main_header">
-        <div class="navbar">
+        <div id="menuList">
             <div class="logo">
                 <img src="../images/SCHOOL LOGO REDEFINED.png" alt="">
                 <div class="school_name">
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="menu_list">
-                <ul class="menu_list">
+                <ul id="menuList">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html">About Us</a></li>
                     <li><a href="./department.html">Departments</a></li>
@@ -35,7 +35,7 @@
                 </ul>
 
             </div>
-            <div class="menu-icon">
+            <div class="menu-icon" onclick="togglemenu()">
                 <div class="menu-icon-bar"></div>
                 <div class="menu-icon-bar"></div>
                 <div class="menu-icon-bar"></div>
@@ -108,6 +108,7 @@
 
         </div>
     </footer>
+    <script src="../main.js"></script>
 </body>
 </div>
 
