--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="menu_list">
-                <ul class="menu_list">
+                <ul id="menuList">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html">About Us</a></li>
                     <li><a href="./department.html">Departments</a></li>
@@ -35,7 +35,7 @@
                 </ul>
 
             </div>
-            <div class="menu-icon">
+            <div class="menu-icon" onclick="togglemenu()">
                 <div class="menu-icon-bar"></div>
                 <div class="menu-icon-bar"></div>
                 <div class="menu-icon-bar"></div>
@@ -112,6 +112,7 @@
 
         </div>
     </footer>
+    <script src="../main.js"></script>
 </body>
 </div>
 
