updated the about us link in the index.html file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="menu_list">
                 <ul id="menuList">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#about_us">About Us</a></li>
+                    <!-- <li><a href="#about_us">About Us</a></li> -->
                     <li><a href="./nav__links/department.html">Departments</a></li>
                     <li><a href="./nav__links/admission.html">Admission</a></li>
                     <li><a href="./nav__links/alumni.html">Alumni</a></li>
