--- a/nav__links/exchange_programme.html
+++ b/nav__links/exchange_programme.html
@@ -36,9 +36,9 @@
 
             </div>
             <div class="menu-icon" onclick="togglemenu()">
-                <div class="menu-icon-bar"></div>
-                <div class="menu-icon-bar"></div>
-                <div class="menu-icon-bar"></div>
+                <div class="menu-icon-bar" id="menuIconTop"></div>
+                <div class="menu-icon-bar" id="menuIconMiddle"></div>
+                <div class="menu-icon-bar" id="menuIconBottom"></div>
             </div>
 
         </div>
