new media queries created in the style.css file

--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
                         accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
                         nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
                         aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
+
                         accusantium voluptates assumenda laborum praesentium molestiae quibusdam. </p>
 
                 </div>
@@ -165,7 +162,7 @@
             </div>
         </div>
         <br><br>
-        <h2>WHY STAR OF THE EAST?</h2>
+        <h2>Why Star Of The East?</h2>
         <div class="why_star_of_the_east">
 
             <div class="reason">
