--- a/nav__links/news.html
+++ b/nav__links/news.html
@@ -46,8 +46,8 @@
 
     </div>
     <div class="slide_container">
-        <h2 style="color: #0b103b;">OUR NOTICE BOARD</h2>
-        <P style="color: #0b103b;">Updates on what is going on in span START OF THE EAST and its environs.</P>
+        <h2>OUR NOTICE BOARD</h2>
+        <P>Updates on what is going on in span START OF THE EAST and its environs.</P>
         <button> SUBSCRIBE</button>
 
     </div>
