--- a/nav__links/news.html
+++ b/nav__links/news.html
@@ -92,15 +92,10 @@
                 </div>
                 <h4>CONNECT WITH US</h4>
                 <div class="social_links">
-                    <a href=""><img src="" alt="facebook">
-                        <div class="facebook_link"></div>
-                    </a>
-                    <a href=""><img src="" alt="instagram">
-                        <div class="instagram_link"></div>
-                    </a>
-                    <a href=""><img src="" alt="twitter">
-                        <div class="twitter_link"></div>
-                    </a>
+                    <a href=""><img src="../images/facebook.png" alt="facebook"></a>
+                    <a href=""><img src="../images/instagram.png" alt="instagram"></a>
+                    <a href=""><img src="../images/twitter.png" alt="twitter"></a>
+                    <a href="https://wa.me/qr/VEG2OVZKT65LH1"><img src="../images/whatsapp.png" alt="whatsapp"></a>
                 </div>
                 <br><br>
                 <div class="copyright_info">
