i updated the admission. html page and also the admission.css files respectively to add the  steps involved in apply for admission

--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -54,12 +54,67 @@
     </div>
     <!-- admission notice  -->
     <div class="admission_notice">
-        <h2>ADMISSION OPEN FOR 2023 ACADEMIC YEAR</h2>
-        <button><a href="">Enroll Now</a></button>
+        <h2>CONTACT US FOR MORE INFORMATION</h2>
+        <button><a href="">CONTACT</a></button>
     </div>
     <div class="main">
-        ADMISSIONS
-        <div class="mainn"></div>
+
+        <div class="mainn">
+            <div class="admission_steps">
+                <div class="step">
+                    <div class="step_number">
+                        <h1>1</h1>
+                    </div>
+                    <div class="step_heading">
+                        <span>Download registration form</span><br><br>
+                    </div>
+                    <p>Download the form uisng the link below, print and submit a copy to the admission office</p><br>
+                    <button>Download form</button>
+                </div>
+                <div class="step">
+                    <div class="step_number">
+                        <h1>2</h1>
+                    </div>
+                    <div class="step_heading">
+                        <span>Provision of other relevant documents</span><br><br>
+                    </div>
+                    <ul>
+                        <li>The last 2 term's academic results from previous school</li><br>
+                        <li> A copy of the student's birth certificate</li><br>
+                        <li>Two passport-sized photos</li>
+                    </ul>
+                </div>
+                <div class="step">
+                    <div class="step_number">
+                        <h1>3</h1>
+                    </div>
+                    <div class="step_heading">
+                        <span>Completer entrance examination (Maths and English)</span><br><br>
+                    </div>
+                    <p>Examinations are usually scheduled at the beginning of a new academic semester. The exams is also
+                        open for mid stream admission students who may seek admission. <br><br>
+
+                        Students will only be permitted to write the entrance exam if there are vacancies in the class
+                        they require.</p>
+                </div>
+                <div class="step">
+                    <div class="step_number">
+                        <h1>4</h1>
+                    </div>
+                    <div class="step_heading">
+                        <span>Fews steps after admission</span>
+                    </div>
+
+                    <ul>
+                        <li>Place is subject to payment of admission and termly tuition fee.</li><br>
+                        <li>Purchase items listed in the school prospectus (Uniform, Recommended books and stationary
+                            and toiletries). Click <a href="">here</a> to download the prospectus list.</li><br>
+                        <li>JOIN OUR COMMUNITY TO ACHIEVE GREATNESS. HURRAY!!! CONGRATULATIONS!!!</li><br>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
     </div>
     <footer>
         <div class="inner_footer">
