--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="menu_list">
                 <ul id="menuList">
                     <li><a href="#">Home</a></li>
-                    <!-- <li><a href="#about_us">About Us</a></li> -->
+                    <li><a href="#about_us">About Us</a></li>
                     <!-- <li><a href="./nav__links/department.html">Departments</a></li> -->
                     <li><a href="./nav__links/admission.html">Admission</a></li>
                     <li><a href="./nav__links/alumni.html">Alumni</a></li>
@@ -54,13 +54,15 @@
     <!-- admission notice  -->
     <div class="admission_notice">
         <h2>ADMISSION OPEN FOR 2023 ACADEMIC YEAR</h2>
-        <button><a href="">Enroll Now</a></button>
+        <button><a href="./nav__links/admission.html">Enroll Now</a></button>
     </div>
     <div class="main">
 
-        <br><br>
+
         <!-- this section defines the about us page  -->
         <div class="about_us">
+
+            <h2 id="about_us" style="color: rgb(255, 255, 255);">#</h2>
             <h2 id="about_us"> ---- ABOUT US
                 ----
             </h2>
