--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -55,7 +55,7 @@
     <!-- admission notice  -->
     <div class="admission_notice">
         <h2>CONTACT US FOR MORE INFORMATION</h2>
-        <button><a href="">CONTACT</a></button>
+        <button><a href="./contact.html">CONTACT</a></button>
     </div>
     <div class="main">
 
