yeah did some updates to the css files

--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -60,7 +60,7 @@
     <div class="main">
 
         <span id="steps"></span>
-        <h4 style="margin: 30px 0px; ">Follow the steps below to complete the admission process</h4>
+        <h4 style="margin: 30px 0px; text-align: center;">Follow the steps below to complete the admission process</h4>
         <div class="mainn">
             <div class="admission_steps">
                 <div class="step">
