--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -104,7 +104,7 @@
                             <h1>3</h1>
                         </div>
                         <div class="step_heading">
-                            <span>Completer entrance examination (Maths and English)</span><br><br>
+                            <span>Complete entrance examination (Maths and English)</span><br><br>
                         </div>
 
                     </div>
