--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 <img src="./images/SCHOOL LOGO REDEFINED.png" alt="">
                 <div class="school_name">
-                    <H3 id="sch_name">STAR OF THE EAST</H3>
+                    <H3 id="sch_name">STAeeeR OF THE EAST</H3>
                     <H3 id="inst_type">SCHOOL COMPLEX</H3>
                 </div>
             </div>
