--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
                             <h4>Message:</h4>
                             <input type="text"> <br>
                             <button>Submit</button> <br>
-                            <input type="checkbox" id="checkbox">
-                            <h4>Send me weekly tips and info</h4>
+                            
+                            <span><input type="checkbox" id="checkbox"> Send me weekly tips and info</span>
                            </form>
                         </div>
                     </div>
