--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
                 <p>Lorem ipsum dolor sit amet consectetur cidunt necessitatibus, assumenda obcaecati sed? Nobis porro, sapiente labore ex similique facere! Consectetur architecto quo, dicta neque quae animi dolores est rem.</P>
                 <button>FIX PC</button>
                 <br><br><br><br><br><br>
-               
+                <h1>WHAT WE OFFER</h1>
+
                 <div class="service">
+
                     <div class="items">
                         <div class="title">
                            <span> OS INSTALLATIONS</span>
@@ -103,12 +105,9 @@
                     </div>
                 </div>
             </div>
-            <div class="two">
+            <!-- <div class="two">
                 <h2>this is the service page</h2>
-                
-
-
-            </div>
+            </div> -->
 
 
 
