--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
                 <a href="#" id="one" onclick="makeActive(this)">
                     <div class="logo">
                         <img src="./images/IFIX LOGO.png" alt="logo">
-                        <p>COMPUTER REPAIRS AND SERVICES</span>
+                        <p>COMPUTER SERVICES</span>
                     </div>
                 </a>
                 <!-- <div class="navlinks"> -->
                     <ul id="navlinks">
-                        <li id="one" onclick="makeActive(this)">Home</li>
-                        <li id="two" onclick="makeActive(this)">Services</li>
-                        <li id="three" onclick="makeActive(this)">Store</li>
-                        <li id="four" onclick="makeActive(this)">Jobs</li>
-                        <li id="five" onclick="makeActive(this)">Appointment</li>
-                        <li id="six" onclick="makeActive(this)">HowTo's</li>
-                        <li id="seven" onclick="makeActive(this)">Contact</li>
-                        
+                        <li id="one" onclick="makeActive(this)"><a href="">Home</a></li>
+                        <li id="two" onclick="makeActive(this)"><a href="">Services</a></li>
+                        <li id="three" onclick="makeActive(this)"><a href="">Store</a></li>
+                        <li id="four" onclick="makeActive(this)"><a href="">Jobs</a></li>
+                        <li id="five" onclick="makeActive(this)"><a href="">Appointment</a></li>
+                        <li id="six" onclick="makeActive(this)"><a href="">HowTo's</a></li>
+                        <li id="seven" onclick="makeActive(this)"><a href="">Contact</a></li>
                     </ul>
                     <!-- <img id="navigation-menu" onclick="showNav" src="./images/icons/navigation-menu.svg" alt="">
                     <img id="close-circled" onclick="hideNav" src="./images/icons/close-circled.svg" alt=""> -->
